<resources>
    <string name="app_name">Casino</string>
    <string name="image_description">Descendre la manivelle et activer le rouleau</string>
    <string name="bouton_nom">Banque</string>
    <string name="bouton_machine">Machine à sous</string>
    <string name="bouton_blackjack">BlackJack</string>
    <string name="bouton_roulette">Roulette</string>
    <string name="txtbanque">Montant à miser</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="mise">0</string>
    <string name="exit">exit</string>
    <string name="enter_bet_hint">Mise à entrer</string>

</resources>