<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BanqueActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtbanque"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/minus"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:onClick="Diminue"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/myTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="8dp"
            android:text="@string/mise"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:onClick="Augmente"
            android:text="@string/plus" />

    </LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="exit"
        android:text="@string/exit"
        android:layout_marginTop="20dp" />
</LinearLayout>
