<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlotMachineActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="518dp"
        android:layout_height="898dp"
        android:layout_marginStart="-55dp"
        android:layout_marginTop="-54dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fond_rideau" />

    <ImageButton
        android:id="@+id/manivelle"
        android:layout_width="139dp"
        android:layout_height="146dp"
        android:layout_marginStart="313dp"
        android:layout_marginTop="265dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manivelle" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="193dp"
        android:layout_height="146dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-9dp"
        android:contentDescription="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banque" />

    <EditText
        android:id="@+id/mise_input"
        android:layout_width="193dp"
        android:layout_height="146dp"
        android:layout_marginStart="200dp"
        android:background="@drawable/banque"
        android:gravity="center"
        android:hint="@string/enter_bet_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/argent"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:text="@string/bouton_nom"
        android:textColor="@color/black"
        android:onClick="openBank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/machine"
        android:layout_width="380dp"
        android:layout_height="379dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="260dp"
        android:contentDescription="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/machine_sous" />

    <ImageView
        android:id="@+id/fruit1"
        android:layout_width="71dp"
        android:layout_height="101dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banane" />

    <ImageView
        android:id="@+id/fruit2"
        android:layout_width="77dp"
        android:layout_height="106dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dragon" />

    <ImageView
        android:id="@+id/fruit3"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginStart="243dp"
        android:layout_marginTop="400dp"
        android:contentDescription="@null"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fraise" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="29dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/cinzel"
        android:text="Mise"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/argent"
        app:layout_constraintTop_toTopOf="@+id/mise_input" />

</androidx.constraintlayout.widget.ConstraintLayout>